--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -13,6 +13,9 @@
 }
 
 /* shared style  */
+.secondary-bg{
+    background: #FFF8F3;
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -27,6 +30,19 @@
     padding: 10px 17px;
     font-size: 15px;
     font-weight: bold;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.Section-description{
+    color: #757575;
+    font-size: 13px;
+    font-weight: 400;
+}
+.text-center{
+    text-align: center;
 }
 
 /* nav Style */
@@ -76,4 +92,44 @@ nav ul{
 }
 .banner-profile-pic{
     width: 584px;
+}
+/* main style */
+main{
+    max-width: 900px;
+    margin: 0 auto;
+}
+main section{
+    margin-top: 75px;
+    margin-bottom: 30px;
+}
+/* about */
+.about{
+    border-radius: 10px;
+    padding: 65px 150px;
+    text-align: center;
+}
+.about-itmes{
+    display: flex;
+    justify-content: space-around;
+}
+.item-title{
+    color:  #757575;
+    font-size: 13px;
+    font-weight: 400;
+}
+.item-description{
+    color:  #757575;
+    font-size: 13px;
+    font-weight: 700;
+}
+/* skills css */
+.skills-container{
+    display: flex;
+    gap: 35px;
+}
+.skill{
+    padding: 30px ;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
