--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -133,3 +133,22 @@ main section{
     background: #FFF;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
+/* resume section */
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+.experience-sub-title{
+    font-size: 15px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.experience-description, .experience-sub-title{
+    color: #757575;
+}
+.resume hr{
+    margin: 30px 0;
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
